@startuml smarter_hub_modelo_dados_completo
hide circle
left to right direction
scale max 1600 width
skinparam shadowing false
skinparam backgroundColor white
skinparam linetype ortho
skinparam dpi 130
skinparam defaultFontName Segoe UI
skinparam defaultFontSize 12
skinparam classAttributeIconSize 0
skinparam ArrowColor #1F3A68
skinparam ClassBorderColor #1F3A68
skinparam ClassBackgroundColor #EEF3FA

class USER {
  +id : string <<PK>>
  +username : string
  +email : string
  +role : string
  +isActive : bool
  +isRootAccess : bool
  +hasAccessTotal : bool
  +accessTotalGrantedById : string <<FK>>
  +teamId : string <<FK>>
}

class TEAM {
  +id : string <<PK>>
  +name : string
  +managerId : string <<FK>>
  +coordinatorId : string <<FK>>
  +parentTeamId : string <<FK>>
}

class TEAM_MEMBERSHIP {
  +id : string <<PK>>
  +userId : string <<FK>>
  +teamId : string <<FK>>
  +isApprover : bool
  +approvalLevel : int
}

class PROFILE {
  +id : string <<PK>>
  +userId : string <<FK>>
  +nomeCompleto : string
  +workCountry : string
  +brWorkState : string
  +dataInicioContrato : string
  +isIntern : bool
  +hourBankLimitHours : float
}

class PROFILE_CHANGE_REQUEST {
  +id : string <<PK>>
  +userId : string <<FK>>
  +reviewedById : string <<FK>>
  +status : string
  +requestedData : json
  +approvedFields : json
  +rejectedFields : json
}

class PROFILE_DROPDOWN_OPTION {
  +id : string <<PK>>
  +type : string
  +label : string
  +normalizedValue : string
  +isActive : bool
}

class VACATION {
  +id : string <<PK>>
  +userId : string <<FK>>
  +contextTeamId : string <<FK>>
  +versionOfId : string <<FK>>
  +status : string
  +requestType : string
  +partialDay : string
  +reviewReason : string
  +versionNumber : int
}

class VACATION_APPROVAL {
  +id : string <<PK>>
  +vacationId : string <<FK>>
  +approverId : string <<FK>>
  +approvalLevel : int
  +status : string
  +reason : string
}

class VACATION_BALANCE_CREDIT {
  +id : string <<PK>>
  +userId : string <<FK>>
  +year : int
  +days : float
}

class VACATION_COMPANY_EXTRA_DAY {
  +id : string <<PK>>
  +scope : string
  +date : string
}

class HOUR_BANK_ENTRY {
  +id : string <<PK>>
  +userId : string <<FK>>
  +type : string
  +hours : float
  +source : string
}

class WEEKLY_HOUR_BANK_REPORT {
  +id : string <<PK>>
  +weekLabel : string
  +periodStart : string
  +periodEnd : string
  +exceededUsers : int
}

class TRAINING {
  +id : string <<PK>>
  +userId : string <<FK>>
  +assignedByUserId : string <<FK>>
  +status : string
}

class NOTIFICATION {
  +id : string <<PK>>
  +userId : string <<FK>>
  +title : string
  +isRead : bool
}

class EMPLOYEE_ADMISSION {
  +id : string <<PK>>
  +status : string
  +personalEmail : string
  +workCountry : string
  +brWorkState : string
  +submissionTokenHash : string
  +invitedById : string <<FK>>
  +reviewedById : string <<FK>>
  +completedById : string <<FK>>
}

class PERMISSION {
  +id : string <<PK>>
  +code : string
  +category : string
  +requiresRestrictions : bool
}

class USER_PERMISSION {
  +id : string <<PK>>
  +userId : string <<FK>>
  +permissionId : string <<FK>>
  +isEnabled : bool
  +restrictedToTeams : json
  +restrictedToCountries : json
  +restrictedToLevels : json
}

class PERMISSION_GRANT {
  +id : string <<PK>>
  +actorUserId : string <<FK>>
  +targetUserId : string <<FK>>
  +permissionId : string <<FK>>
  +action : string
}

class SYSTEM_SETTING {
  +key : string <<PK>>
  +boolValue : bool
}

TEAM "1" -- "0..*" USER : contains
TEAM "1" -- "0..*" TEAM_MEMBERSHIP : has
USER "1" -- "0..*" TEAM_MEMBERSHIP : belongs
TEAM "1" -- "0..*" TEAM : parent_of

USER "1" -- "0..1" PROFILE : owns
USER "1" -- "0..*" PROFILE_CHANGE_REQUEST : requests
USER "1" -- "0..*" PROFILE_CHANGE_REQUEST : reviews
PROFILE ..> PROFILE_DROPDOWN_OPTION : consulta catálogo

USER "1" -- "0..*" VACATION : creates
TEAM "1" -- "0..*" VACATION : context
VACATION "1" -- "0..*" VACATION_APPROVAL : steps
VACATION "1" -- "0..*" VACATION : versions
USER "1" -- "0..*" VACATION_APPROVAL : decides

USER "1" -- "0..*" VACATION_BALANCE_CREDIT : receives
USER "1" -- "0..*" VACATION_COMPANY_EXTRA_DAY : creates

USER "1" -- "0..*" HOUR_BANK_ENTRY : owns
USER "1" -- "0..*" WEEKLY_HOUR_BANK_REPORT : generates

USER "1" -- "0..*" TRAINING : receives
USER "1" -- "0..*" NOTIFICATION : receives
USER "1" -- "0..*" EMPLOYEE_ADMISSION : manages

USER "1" -- "0..*" USER_PERMISSION : has
PERMISSION "1" -- "0..*" USER_PERMISSION : type
USER "1" -- "0..*" PERMISSION_GRANT : acts
PERMISSION "1" -- "0..*" PERMISSION_GRANT : granted
USER "1" -- "0..*" USER : grants_access_total

note bottom
Modelo de dados completo: identidade, governação,
aprovações versionadas, compliance PT/BR e auditabilidade.
end note
@enduml